2001-02-01  lav

	* about.cc: correct copyright string.

2001-01-31  lav

	* search.cc: fix replacing when replace string ends with \.
	  (reported by Andrey E. Lerman <lae@lae.pp.ru>)

2000-12-26  lav

	* block.cc: set modification flag after piping in.
	* user.cc: paranoia - set flag in UsesPipeBlock.

2000-12-20  lav

	* block.cc: fix block end setting in DoUnindent/DoIndent.

2000-12-18  lav

	* block.cc: (DoUnindent) break loop if no next line found (fixes
	  spinning in case of missing EOL on last line of block).
	* keymap.cc: flush input only if no action matched.
	* keymap.h: add MARK_ALL action.
	* keymapdf.cc, keymapfn.cc: bind MARK_ALL.

2000-09-15  lav

	* edit.cc: call LoadMainMenu.
	* keymap.cc, keymap.h, keymapdf.cc, keymapfn.cc: lots of new functions;
	  pretty keys support.
	* menu1.cc, menu1.h: loadable menu support.
	* mainmenu.cc: adapt for new menu1.h

2000-09-04  lav

	* edit.cc, loadsave.cc: support DISABLE_FILE_LOCKS
	* screen.cc: use TextPoint in display process (minor speed-up).
	* textpoin.cc, textpoin.h: speed-up TextPoint cache.

2000-03-24  lav

	* block.cc, edit.cc, edit.h, ext.cc, format.cc, frames.cc, kern.cc,
	  keymapdf.cc, keymapfn.cc, loadsave.cc, mainmenu.cc, options.cc,
	  screen.cc, screen.h, search.cc, user.cc, user.h: add MessageSync
	  function; use it; don't call refresh from Message; move Optimize
	  to user.cc and rename it to UserOptimizeText; Redisplay now checks
	  if a message is on screen; TestPosition shifts screen left when
	  cursor is closer to left side than hscroll.

2000-03-21  lav

	* kern.cc: (ToLineEnd) set flag when spaces are truncated in test mode.

2000-03-16  lav

	* search.cc, screen.cc: move screen shifting because of status line
	  to TestPosition.
	* edit.cc: don't ask for save if read-only.
	* keymap.cc: leave more space for func name.

2000-02-28  lav

	* keymap.cc: break loop on EOF.

2000-02-18  lav

	* highli.cc, highli.h, search.cc: fix few memory alloc/free problems