@@ -1,184 +1,0 @@
-.\" -*-nroff-*-
-.de TQ
-.br
-.ns
-.TP \\$1
-..
-.TH LE 1 "28 Sep 2000"
-.SH NAME
-le \- full screen text editor
-.SH SYNOPSIS
-.B le
-.I [options] filename
-.SH DESCRIPTION
-\fBle\fP is a text editor which offers wide range of capabilities
-with a simple interface. It has a pull down menu and a simple help system
-to get started. See \fBKEYS\fP section below to learn about key combinations.
-.P
-Among its features there are: various operations with stream and
-rectangular blocks, search and replace with full regular expressions,
-text formatting, undelete/uninsert, hex editing, tunable key sequences,
-tunable colors, tunable syntax highlighting.
-.P
-The editor currently supports only one loaded file at a time.
-
-.SH KEYS
-Here are some starting hints:
-.LP
-.TP
-.B F10 or C-n
-menu
-.TP
-.B F1
-help
-.TP
-.B C-x
-exit (cancel)
-.TP
-.B Arrows
-navigate
-.P
-In the editor the following key description is used:
-.TP
-.B Key1\-Key2
-simultaneous key1 and key2 press
-.TP
-.B Key1+Key2
-sequential keys press
-.TP
-.B Key1 | Key2
-press Key1 OR Key2
-.TP
-.B ^Key
-Ctrl-Key
-.TP
-.B ~Key
-Shift-Key
-.TP
-.B ^~Key
-Ctrl-Shift-Key | Alt-Key
-.P
-Some of ^Fx, ~Fx, ^~Fx can be typed as ESC+Fx.
-.LP
-The rest of key combinations can be seen in help, in menu and in the
-keyboard map (default one can be seen with \fIle\ \-\-dump\-keymap\fP).
-.P
-There is support for block filtering through an external program, a command
-output read-in, writing a block through a command. To read or write block
-from/to a command, use F4+R or F4+W and file name of the following format:
-``|command args''. Filtering is acheived by F4+| followed by command name.
-
-.SH STATUS LINE
-On the status line you can see current line, column, the size of loaded
-file, the code of character under cursor, several one letter flags, file name,
-offset in bytes from the file beginning and percent position in the file.
-.P
-One letters flags are: * - modified; R - russian keyboard (works only on
-certain terminals); I - insert, O - overstrike; A - autoindent; D - dos
-style line terminators (CR NL); U - undelete possible, u - uninsert possible;
-B - column block mode.
-
-.SH TEXT PROTECTION
-To prevent changes loss on crash, \fBle\fP regularly dumps the editing text,
-if changed, to
-.I "~/.le/tmp/FILENAME.PID",
-where FILENAME is the file name with slashes converted to underlines; PID
-is the process id of the editor process.
-.P
-When the editor gets a fatal signal, it also dumps the text, to
-.I "~/.le/tmp/DUMP-SIG-FILENAME.PID",
-where SIG is the signal number.
-
-.SH OPTIONS
-.TP
-.B \-r, \-\-read\-only
-Work as viewer, don't allow changes. If your system supports mmap(2),
-it will be used to get file contents to memory.
-.TP
-.B \-h, \-\-hex\-mode
-Start in hex mode
-.TP
-.B \-\-mmap
-Use mmap(2) to load file read-only. Can be used to view very large files
-or even devices. This implies -h.
-.TP
-.B \-\-mmap\-rw
-Use mmap(2) to load file read-write in MAP_SHARED mode. Use with caution --
-the changes go directly to file or disk, no undo. In this mode only replace
-can be used, but it allows editing of very large files or even devices.
-This implies -h.
-.TP
-.B \-b, \-\-black\-white
-Start in black & white mode
-.TP
-.B \-c, \-\-color
-Start in color mode
-.TP
-.B \-\-dump\-keymap
-Dump default keymap to stdout and exit
-.TP
-.B \-\-dump\-colors
-Dump default color map to stdout and exit
-.TP
-.B \-\-version
-Print the version of LE and exit
-.TP
-.B \-\-help
-Print short description of options and exit
-
-.SH FILES
-.TP
-.BI DATADIR/colors
-.TQ
-.BI ~/.le/colors
-.TQ
-.BI DATADIR/colors\-$TERM
-.TQ
-.BI ~/.le/colors\-$TERM
-Color palette description. Those files are sequentially read and color definitions
-in later files have higher precision.
-.TP
-.BI ~/.le/keymap\-$TERM
-.TQ
-.BI DATADIR/keymap\-$TERM
-.TQ
-.BI ~/.le/keymap
-.TQ
-.BI DATADIR/keymap
-Key map descriptions. Only the first existing file is read.
-.TP
-.BI ~/.le/term\-$TERM
-.TQ
-.BI DATADIR/term\-$TERM
-Terminal specific options. Only the first existing file is read. Use Options\->Terminal
-menu to tune the options.
-.TP
-.BI ./.le.ini
-.TQ
-.BI ~/.le/le.ini
-.TQ
-.BI DATADIR/le.ini
-Options. Only the first existing file is read. Use menu Options to tune these.
-.TP
-.BI .le.syntax
-.TQ
-.BI ~/.le/syntax
-.TQ
-.BI DATADIR/syntax
-Syntax highlighting rules.  Only the first existing file is read. There is no
-default built-in in the editor, so if those files are not present you won't see
-any syntax highlighting.
-.TP
-.BI ~/.le/mainmenu
-.TQ
-.BI DATADIR/mainmenu
-Main editor menu. It has simple text format. Only the first existing file is read.
-.TP
-.BI ~/.le/history
-Various histories are saved here. Do not edit by hand.
-.P
-\fBDATADIR\fP is determined at compile time by configure script
-(pkgdatadir variable). By default it has value \fI/usr/local/share/le\fP.
-
-.SH AUTHOR
-The \fBLE\fP editor was written by Alexander V. Lukyanov <lav@yars.free.net>.
